force-app/main/default/objects/Message_Type_Mapping__mdt/Message_Type_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Used to create a mapping between a Salesforce field API and an inbound data point from the Inbound Message Service, for creating a new Inbound Platform Event</description>
    <label>Message Type Mapping</label>
    <pluralLabel>Message Type Mappings</pluralLabel>
</CustomObject>