force-app/main/default/objects/Message_Type_Mapping__mdt/fields/External_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Field_Name__c</fullName>
    <description>External Field Name from Inbound API</description>
    <label>External Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>