force-app/main/default/objects/Message_Type_Mapping__mdt/fields/Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Message_Type__c</fullName>
    <description>Used to Associate a mapping to a type</description>
    <label>Message Type</label>
    <referenceTo>Message_Type__mdt</referenceTo>
    <relationshipLabel>Message Type Mappings</relationshipLabel>
    <relationshipName>Message_Type_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>