force-app/main/default/objects/Message_Type_Mapping__mdt/fields/Salesforce_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_API_Name__c</fullName>
    <description>Salesforce Field API Name</description>
    <label>Salesforce API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>