force-app/main/default/objects/Message_Type_Mapping__mdt/fields/sObject_Outbound_Only__c.field-meta.xml
<CustomField>
    <fullName>sObject_Outbound_Only__c</fullName>
    <description>The sobject for the outbound message</description>
    <label>sObject(Outbound Only)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>